alignment fixed & short/long desc added

--- a/static/sass/_input_main.scss
+++ b/static/sass/_input_main.scss
@@ -3,7 +3,7 @@
   /*min-height: 100vh;*/
 }
 #nav-main-wrapper{
-  min-height: 100vh;
+  min-height: 98vh;
 }
 #input-main-descriptive-placeholder{
   background-color: dimgrey;
